<resources>
    <string name="app_name">DeGiuaKy1</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="TenMonHoc">Ten Mon Hoc : </string>
    <string name="MaMonHoc">Ma Mon Hoc :</string>
    <string name="TinChi">So tin Chi :</string>
    <string name="ChiTietMonHoc">Chi Tiet Mon Hoc</string>
    <string name="HovaTenn">Ho va Ten</string>
    <string name="masv">MA SV</string>
    <string name="DanhSachMonHoc">Danh Sach Mon Hoc</string>
    <string name="update">Update</string>
    <string name="back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_MH_fragment">this is mon hoc fragment</string>
    <string name="hello_DT_fragment">This is dien thoai fragment</string>
    <string name="add">add new item</string>
    <string name="Create">Create</string>
</resources>
